# Muse

./: CMakeLists.txt  README.md
include/audio/: audio.h  audio_io.h
include/binary/: archiving.h  binary_io.h
include/debugging/: asserts.h  dumping.h
include/fft/: constellation.h  dft.h  hashing.h  spectrogram.h
include/scoring/: matching.h
include/scoring/histogram/: histogram.h  statistics.h
include/stream/: live_recognition.h  utils.h
src/: main.c
src/audio/: audio.c  audio_io.c
src/binary/: archiving.c  binary_io.c
src/debugging/: audio_output.c  dumping.c
src/fft/: constellation.c  dft.c  hashing.c  spectrogram.c
src/scoring/: matching.c
src/scoring/histogram/: histogram.c  statistics.c
src/stream/: live_recognition.c  utils.c
